k8s/overlays/dev/service-core/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-core
  labels:
    app.kubernetes.io/name: service-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: service-core
  template:
    metadata:
      labels:
        app.kubernetes.io/name: service-core
    spec:
      serviceAccountName: service-core-sa

      volumes:
        - name: kafka-ca
          emptyDir: {}

      containers:
        - name: service-core
          image: 345340320521.dkr.ecr.us-east-2.amazonaws.com/service-core:0b1b03b7ab7041a810038ffbeed7be6267a15493
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
