k8s/overlays/dev/service-core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-core
  labels:
    app.kubernetes.io/name: service-core
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: service-core
  ports:
    - name: http
      port: 80
      targetPort: http
