k8s/overlays/dev/service-core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-core
  annotations:
    alb.ingress.kubernetes.io/group.name: travelhub-dev
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /service-core
            pathType: Prefix
            backend:
              service:
                name: service-core
                port:
                  number: 80
